refactor: improve EntryData architecture and reduce duplication
Model improvements:
- Add `timestamp` to EntryData sealed base class, eliminating ~3 duplicate
  instanceof chains across exporters
- Replace opaque Triple<String,String,Int> with named ContextFileRef data class
- Replace opaque Pair<String,String> with named FileRef data class
- Convert Prompt, TurnStats, ContextFiles, Status, SessionSeparator to data class
- Change Text/Thinking `raw` from StringBuilder to String for immutability

Utility extraction:
- Extract sanitizeToolName to shared ExportUtils (was on AnthropicClientExporter,
  called cross-package by KiroClientExporter)
- Deduplicate sessionsDir() helper from SessionStoreV2 and SessionSwitchService
  into ExportUtils
- Delete getEntryTimestamp() instanceof chain in CodexClientExporter
- Delete getTimestamp() instanceof chain in SearchConversationHistoryTool
- Simplify resolveStartTime() in CopilotClientExporter

23 files changed, all 634 tests pass.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>